fix css spacing for sidebar menu

--- a/src/index.css
+++ b/src/index.css
@@ -56,17 +56,13 @@
     .hover\:border-color-theme{
         @apply hover:border-amber-500
     }
-    
-    nav.my-sidebar > ul {
-        @apply h-screen;
-    }
 
-    nav.my-sidebar > ul .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title, nav.my-sidebar .ant-menu-inline > .ant-menu-item {
+    nav.my-sidebar ul .ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title, nav.my-sidebar .ant-menu-inline > .ant-menu-item {
         height: 40px;
         font-weight: 500;
         /* font-size: 15px; */
     }
-    nav.my-sidebar > ul .ant-menu-item:not(:last-child), nav.my-sidebar .ant-menu-item, nav.my-sidebar .ant-menu-submenu-title{
+    nav.my-sidebar ul .ant-menu-item:not(:last-child), nav.my-sidebar .ant-menu-item, nav.my-sidebar .ant-menu-submenu-title{
         margin-bottom:0;
         margin-top:0;
     }
